# docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /
 definitions:
   model.AffiliationResponse:
     properties:
@@ -108,12 +107,8 @@ definitions:
       username:
         type: string
     type: object
-host: localhost:8080
 info:
   contact: {}
-  description: Backend API for the register system with JWT auth and role-based access.
-  title: Register System API
-  version: "1.0"
 paths:
   /admin/users/{id}/accept:
     post:
@@ -355,9 +350,4 @@ paths:
       summary: Register a new user
       tags:
       - Auth
-securityDefinitions:
-  BearerAuth:
-    in: header
-    name: Authorization
-    type: apiKey
 swagger: "2.0"
